--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "build": "cd ./osa3/puhelinluettelo-frontend && npm install && npm run build && mv ./build/ ../../build/ && cd ../puhelinluettelo-backend && npm install && cp -R ./. ../../",
-        "start": "node index.js"
+        "start": "node index.js",
+        "deploy": "git push heroku master"
     }
 }
