--- a/osa8/library-backend/package.json
+++ b/osa8/library-backend/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.17.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "mongoose": "^5.10.8",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.4",
     "uuid": "^3.4.0"
   }
