--- a/osa9/calculator/package.json
+++ b/osa9/calculator/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.11.10",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
