--- a/osa9/calculator/package.json
+++ b/osa9/calculator/package.json
@@ -7,13 +7,19 @@
     "ts-node": "ts-node",
     "calculateBmi": "npm run ts-node -- bmiCalculator.ts",
     "calculateExercises": "npm run ts-node -- exerciseCalculator.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.11.10",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
