--- a/osa9/calculator/package.json
+++ b/osa9/calculator/package.json
@@ -8,13 +8,17 @@
     "calculateBmi": "npm run ts-node -- bmiCalculator.ts",
     "calculateExercises": "npm run ts-node -- exerciseCalculator.ts",
     "start": "npm run ts-node index.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "lint": "eslint --ext .ts ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.10",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.12.1",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
